styles/styles.scss
/* ... */
.margin-t100  {
  margin-top: 100px;
}

.margin-t50  {
  margin-top: 50px;
}


a {
  color: #373836 !important;
  text-decoration: none !important;
  font-weight: 500 !important;
}


.u-textcenter {
  text-align: center;
}

.container {
  // margin: 0 4% !important;
  display: block !important;
  margin: 0 5% !important;
  width: 90%!important;

  @media #{$mq-large} {
    margin: 0 auto !important;
    width: 86% !important;
    max-width: 1200px !important;
  }

  @media #{$mq-xlarge} {
   
    max-width: 1340px !important;
  }
}

h1, h2   {
  font-weight: 700 !important;
  font-family: Syne, sans-serif;
  line-height: 1.1 !important;
}

h3 {
  font-weight: 700;
  font-family: Syne, sans-serif;
}

h5 {
  font-weight: 800 !important;
}

button {
  height: 46px;
  background-color: #373836;
  border: none;
  border-radius: 6px !important;
  cursor: pointer;
  // width: 100%;

  &.text {
    font-weight: 500;
    font-stretch: normal;
    font-style: normal;
    line-height: 1.57;
    color: #fff;
    font-size: 16px !important;
  }

  &.outline {
    background: transparent;
    color: $color-main !important;
    border: 2px solid $color-dominant;
  }
}

input {
  height: 46px !important;
  // border-radius: 4px !important;
  border: solid 1px transparent !important;
  background-color: white;
  padding-left: 15px;
  width: 100%;
  font-size: 1em;
}

.error-message {
  font-size: 0.8em;
  color: red;
  }


.fade-enter {
    opacity: 0.01;
}

.fade-enter.fade-enter-active {
    opacity: 1;
    transition: opacity 300ms ease-in;
}

.fade-exit {
    opacity: 1;
}

.fade-exit.fade-exit-active {
    opacity: 0.01;
    transition: opacity 300ms ease-in;
}

// This transition behavior is not what we expected. 
// We want those two components to fade in and out at the same position.
div.transition-group {
  position: relative;
}

section.route-section {
  position: absolute;
  width: 100%;
  top: 0;
  left: 0;
}

.opaque {
  background-color: #f9f9f990 !important;
}

.clear-nav-bar {
  background-color: transparent !important;
}

.hideNewPicksView {
  display: none;
}


#hero-main {
  border-bottom: 1px solud #00000010;
  padding-top: 8rem;
  padding-bottom: 8rem;

  @media screen and #{$mq-large} {
    padding-top: 16rem;
    padding-bottom: 20rem;
  }

  .grid-container {
    display: grid;
    column-gap: 25px;
    row-gap: 1rem;
    
    grid-template-areas:
    'heading'
    'heroImg'
    'subhead'
    'ctaButtons';
    
    .ctaButtons {
      display: flex;
      flex-direction: column;
      max-width: 90%;
    }

    .heroImg {
      max-width: 95%;
    }

    .subhead {
      font-size: 1rem;
      font-weight: 500;
      color: #474747;
    }

    @media screen and #{$mq-small} {
      .ctaButtons {
        display: block;
      }

      .heading {
        max-width: 90%;
      }

      .heroImg {
        margin-right: auto; // left-aligned
      }

      .subhead {
        grid-area: subhead;
        max-width: 80%;
      }
    }

    @media screen and #{$mq-medium} {
      grid-template-columns: 1fr 2fr;
      row-gap: 0px;
      grid-template-areas:
      'heading heroImg'
      'subhead heroImg'
      'ctaButtons heroImg';

      .heading {
        grid-area: heading;
        max-width: 100%;
      }
      
      .heroImg {
        grid-area: heroImg;
        margin-left: auto; // right-aligned
        max-width: 100%;
      }
      
      .subhead {
        grid-area: subhead;
        font-size: 1rem !important;
        max-width: 100%;
      }
      
      .ctaButtons {
        grid-area: ctaButtons;
      }
    
    }

    @media screen and #{$mq-large} {
      padding: 0 4rem;
      grid-template-columns: 1fr 1fr;
      
      .heroImg {
        margin-left: auto;
        margin-top: 0;
        margin-bottom: 0;
      }
      .subhead {
        font-size: 1.2rem !important;
      }
    }   
  }
}


#cover-med-group {
  // @include background('./images/cover-bg.jpg', bottom , no-repeat, #f4f5fa);
  // height: 75vh;
  // padding-bottom: 80%;
  margin: 0 4% 4%;
  height: auto;
  display: block;
  // width: 90vw;
  background-image: url('/images/med-group-cover.jpg');
  background-position: top bottom;
  background-repeat: no-repeat;
  // object-fit: cover;

  @media #{$mq-medium} {
    background-image: url('/images/med-group-cover.jpg');
  }

  @media #{$mq-large} {
    background-image: url('/images/med-group-cover.jpg');
  }

  @media #{$mq-xlarge} {
    background-image: url('/images/med-group-cover.jpg');
  }
}

#cover-about-us {
  // @include background('./images/cover-bg.jpg', bottom , no-repeat, #f4f5fa);
  // height: 75vh;
  // padding-bottom: 80%;
  margin: 0 4% 4%;
  height: auto;
  display: block;
  // width: 90vw;
  background: #222 url('/images/better-life.jpg');
  background-position: right;
  background-repeat: no-repeat;
  background-size: contain;
  color: white !important;
  

  // @media #{$mq-medium} {
  //   background: #222 url('/images/better-life.jpg');
  // }

  // @media #{$mq-large} {
  //   background: #222 url('/images/better-life.jpg');
  // }

  // @media #{$mq-xlarge} {
  //   background: #222 url('/images/better-life.jpg');
  // }
}

#cover-security {
  // @include background('./images/cover-bg.jpg', bottom , no-repeat, #f4f5fa);
  // height: 75vh;
  // padding-bottom: 80%;
  margin: 4%;
  height: auto;
  display: block;
  // width: 90vw;
  background-image: url('/images/cloud-security.jpg');
  background-position: top bottom;
  background-repeat: no-repeat;
  // object-fit: cover;
  color: #302879 !important;
  // color: azure !important;

  @media #{$mq-medium} {
    background-image: url('/images/cloud-security.jpg');
  }

  @media #{$mq-large} {
    background-image: url('/images/cloud-security.jpg');
  }

  @media #{$mq-xlarge} {
    background-image: url('/images/cloud-security.jpg');
  }
}
/* ... */

